[gd_scene load_steps=23 format=3 uid="uid://b6a81omnqris6"]

[ext_resource type="Script" path="res://Scenes/Box_controll.gd" id="1_3e0ga"]
[ext_resource type="Texture2D" uid="uid://cyyish07lp3o7" path="res://Assets/Box_Box_sides.png" id="2_845c0"]
[ext_resource type="Texture2D" uid="uid://l0dnfn5ifm8m" path="res://Assets/Grid.png" id="3_bqyg1"]
[ext_resource type="Texture2D" uid="uid://0q76bgb71ssp" path="res://Assets/Shadow_strong1.png" id="4_k8jki"]
[ext_resource type="Texture2D" uid="uid://cakjutx4ay4cw" path="res://Assets/Stamp3.png" id="5_pkjgq"]
[ext_resource type="Texture2D" uid="uid://d1ckb8ph8nofe" path="res://Assets/Stamp.png" id="6_4wadw"]
[ext_resource type="Texture2D" uid="uid://dnagyu8f3b0n3" path="res://Assets/Stamp2.png" id="7_s6gif"]
[ext_resource type="Texture2D" uid="uid://5vda01xbhq2y" path="res://Assets/Side_label.png" id="8_tqnm3"]
[ext_resource type="Texture2D" uid="uid://b47v4ojdthm20" path="res://Assets/equation (1).png" id="9_r0inx"]
[ext_resource type="Texture2D" uid="uid://5dbqlxy5xjs3" path="res://Assets/h.png" id="9_tm7ot"]
[ext_resource type="Script" path="res://Scenes/UI2.gd" id="9_xrwn6"]
[ext_resource type="Texture2D" uid="uid://c8gqf64sfl40n" path="res://Assets/h_latex.png" id="10_51emq"]
[ext_resource type="FontFile" uid="uid://bhuw12vl5wow3" path="res://Assets/Fonts/cmu.serif-roman.ttf" id="10_binec"]
[ext_resource type="Texture2D" uid="uid://dvb7voxeu77aq" path="res://Assets/Function.png" id="11_u1bjq"]
[ext_resource type="Texture2D" uid="uid://cfp6ali8hiyyq" path="res://Assets/Function_value.png" id="12_bc5xx"]
[ext_resource type="PackedScene" uid="uid://dmmnymbts27dl" path="res://Scenes/graph.tscn" id="13_rsndy"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_o46ki"]
sky_top_color = Color(1, 1, 1, 1)
sky_horizon_color = Color(1, 1, 1, 1)
ground_bottom_color = Color(1, 1, 1, 1)
ground_horizon_color = Color(1, 1, 1, 1)

[sub_resource type="Sky" id="Sky_d6xs8"]
sky_material = SubResource("ProceduralSkyMaterial_o46ki")

[sub_resource type="Environment" id="Environment_wfqae"]
background_mode = 2
background_energy_multiplier = 0.6
sky = SubResource("Sky_d6xs8")
tonemap_mode = 2
ssao_enabled = true
ssil_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tuv7t"]
resource_name = "Material.001"
cull_mode = 2
albedo_texture = ExtResource("2_845c0")

[sub_resource type="ArrayMesh" id="ArrayMesh_x5pyr"]
_surfaces = [{
"aabb": AABB(-4, -0.5, -4, 8, 1, 8.00001),
"format": 34896613377,
"index_count": 84,
"index_data": PackedByteArray(0, 0, 9, 0, 8, 0, 0, 0, 2, 0, 9, 0, 2, 0, 10, 0, 9, 0, 2, 0, 6, 0, 10, 0, 6, 0, 11, 0, 10, 0, 6, 0, 4, 0, 11, 0, 4, 0, 8, 0, 11, 0, 4, 0, 0, 0, 8, 0, 2, 0, 4, 0, 6, 0, 2, 0, 0, 0, 4, 0, 5, 0, 14, 0, 7, 0, 5, 0, 15, 0, 14, 0, 1, 0, 9, 0, 3, 0, 1, 0, 8, 0, 9, 0, 3, 0, 10, 0, 7, 0, 3, 0, 9, 0, 10, 0, 7, 0, 11, 0, 5, 0, 7, 0, 10, 0, 11, 0, 5, 0, 8, 0, 1, 0, 5, 0, 11, 0, 8, 0, 14, 0, 12, 0, 13, 0, 14, 0, 15, 0, 12, 0, 3, 0, 12, 0, 1, 0, 3, 0, 13, 0, 12, 0, 1, 0, 15, 0, 5, 0, 1, 0, 12, 0, 15, 0, 7, 0, 13, 0, 3, 0, 7, 0, 14, 0, 13, 0),
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 16,
"vertex_data": PackedByteArray(0, 0, 0, 0, 254, 255, 0, 0, 26, 4, 255, 255, 228, 251, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 26, 4, 255, 255, 26, 4, 0, 0, 255, 255, 0, 0, 254, 255, 0, 0, 228, 251, 255, 255, 228, 251, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 228, 251, 255, 255, 26, 4, 0, 0, 0, 0, 255, 255, 254, 255, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 255, 255, 254, 255, 0, 0, 26, 4, 209, 17, 228, 251, 0, 0, 26, 4, 209, 17, 26, 4, 0, 0, 228, 251, 209, 17, 26, 4, 0, 0, 228, 251, 209, 17, 228, 251, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_xdj4f"]
resource_name = "Box_Cube_002"
_surfaces = [{
"aabb": AABB(-4, -0.5, -4, 8, 1, 8.00001),
"attribute_data": PackedByteArray(204, 225, 195, 217, 41, 224, 90, 217, 255, 255, 255, 255, 174, 233, 164, 230, 76, 154, 41, 251, 49, 235, 45, 218, 0, 0, 255, 255, 73, 211, 90, 217, 0, 0, 255, 255, 181, 236, 45, 218, 178, 157, 41, 251, 49, 235, 164, 230, 204, 225, 164, 230, 41, 224, 58, 230, 45, 224, 195, 217, 174, 233, 45, 218, 76, 154, 212, 252, 43, 232, 164, 230, 255, 255, 255, 255, 73, 211, 58, 230, 45, 224, 164, 230, 181, 236, 164, 230, 178, 157, 212, 252, 43, 232, 45, 218, 104, 227, 195, 217, 62, 154, 26, 251, 255, 255, 0, 0, 0, 0, 0, 0, 192, 157, 26, 251, 0, 0, 0, 0, 255, 255, 0, 0, 192, 157, 227, 252, 201, 225, 164, 230, 104, 227, 164, 230, 62, 154, 227, 252, 201, 225, 195, 217, 47, 232, 164, 230, 69, 206, 147, 255, 178, 233, 45, 218, 53, 235, 45, 218, 69, 206, 172, 250, 178, 233, 164, 230, 53, 235, 164, 230, 44, 211, 172, 250, 172, 230, 45, 218, 47, 232, 45, 218, 44, 211, 147, 255, 172, 230, 164, 230),
"format": 34896613399,
"index_count": 84,
"index_data": PackedByteArray(2, 0, 29, 0, 26, 0, 2, 0, 8, 0, 29, 0, 6, 0, 30, 0, 27, 0, 6, 0, 18, 0, 30, 0, 20, 0, 35, 0, 32, 0, 20, 0, 14, 0, 35, 0, 12, 0, 24, 0, 33, 0, 12, 0, 0, 0, 24, 0, 7, 0, 13, 0, 19, 0, 7, 0, 1, 0, 13, 0, 17, 0, 44, 0, 23, 0, 17, 0, 47, 0, 44, 0, 4, 0, 28, 0, 10, 0, 4, 0, 25, 0, 28, 0, 10, 0, 31, 0, 22, 0, 10, 0, 28, 0, 31, 0, 22, 0, 34, 0, 16, 0, 22, 0, 31, 0, 34, 0, 16, 0, 25, 0, 4, 0, 16, 0, 34, 0, 25, 0, 43, 0, 37, 0, 40, 0, 43, 0, 46, 0, 37, 0, 11, 0, 38, 0, 5, 0, 11, 0, 41, 0, 38, 0, 3, 0, 45, 0, 15, 0, 3, 0, 36, 0, 45, 0, 21, 0, 39, 0, 9, 0, 21, 0, 42, 0, 39, 0),
"material": SubResource("StandardMaterial3D_tuv7t"),
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 48,
"vertex_data": PackedByteArray(0, 0, 0, 0, 254, 255, 255, 191, 0, 0, 0, 0, 254, 255, 84, 213, 0, 0, 0, 0, 254, 255, 255, 191, 26, 4, 255, 255, 228, 251, 255, 255, 26, 4, 255, 255, 228, 251, 80, 223, 26, 4, 255, 255, 228, 251, 84, 213, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 84, 213, 0, 0, 0, 0, 0, 0, 255, 191, 26, 4, 255, 255, 26, 4, 255, 191, 26, 4, 255, 255, 26, 4, 9, 205, 26, 4, 255, 255, 26, 4, 84, 213, 255, 255, 0, 0, 254, 255, 255, 191, 255, 255, 0, 0, 254, 255, 84, 213, 255, 255, 0, 0, 254, 255, 84, 213, 228, 251, 255, 255, 228, 251, 255, 255, 228, 251, 255, 255, 228, 251, 9, 205, 228, 251, 255, 255, 228, 251, 84, 213, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 84, 213, 255, 255, 0, 0, 0, 0, 84, 213, 228, 251, 255, 255, 26, 4, 255, 191, 228, 251, 255, 255, 26, 4, 80, 223, 228, 251, 255, 255, 26, 4, 84, 213, 0, 0, 255, 255, 254, 255, 255, 191, 0, 0, 255, 255, 254, 255, 237, 222, 0, 0, 255, 255, 254, 255, 255, 191, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 240, 204, 0, 0, 255, 255, 0, 0, 255, 191, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 237, 222, 255, 255, 255, 255, 0, 0, 84, 213, 255, 255, 255, 255, 254, 255, 255, 191, 255, 255, 255, 255, 254, 255, 240, 204, 255, 255, 255, 255, 254, 255, 84, 213, 26, 4, 209, 17, 228, 251, 255, 255, 26, 4, 209, 17, 228, 251, 255, 191, 26, 4, 209, 17, 228, 251, 84, 213, 26, 4, 209, 17, 26, 4, 255, 191, 26, 4, 209, 17, 26, 4, 255, 191, 26, 4, 209, 17, 26, 4, 84, 213, 228, 251, 209, 17, 26, 4, 255, 191, 228, 251, 209, 17, 26, 4, 255, 191, 228, 251, 209, 17, 26, 4, 84, 213, 228, 251, 209, 17, 228, 251, 255, 255, 228, 251, 209, 17, 228, 251, 255, 191, 228, 251, 209, 17, 228, 251, 84, 213, 255, 255, 255, 255, 170, 42, 84, 213, 255, 127, 255, 255, 255, 191, 255, 191, 234, 207, 214, 31, 170, 42, 170, 42, 255, 255, 255, 127, 170, 42, 84, 213, 255, 127, 255, 255, 255, 255, 255, 255, 44, 219, 90, 54, 170, 42, 170, 42, 255, 255, 255, 255, 170, 42, 84, 213, 170, 42, 170, 42, 255, 191, 255, 191, 44, 219, 90, 54, 84, 213, 84, 213, 255, 255, 255, 127, 170, 42, 84, 213, 170, 42, 170, 42, 255, 255, 255, 255, 234, 207, 214, 31, 84, 213, 84, 213, 255, 255, 255, 255, 27, 208, 57, 32, 255, 127, 255, 255, 255, 255, 255, 127, 65, 219, 132, 54, 255, 127, 255, 255, 255, 255, 255, 127, 27, 208, 57, 32, 170, 42, 170, 42, 255, 255, 255, 255, 65, 219, 132, 54, 170, 42, 170, 42, 255, 191, 255, 191, 255, 255, 255, 127, 170, 42, 170, 42, 255, 255, 255, 255, 255, 255, 255, 127, 170, 42, 170, 42, 255, 255, 255, 255, 255, 255, 255, 127, 84, 213, 84, 213, 255, 191, 255, 191, 255, 255, 255, 127, 84, 213, 84, 213)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_x5pyr")

[node name="Root" type="Node3D"]

[node name="Main" type="Node3D" parent="." node_paths=PackedStringArray("slider", "box", "shadow", "camera", "decal1", "decal2", "decal3", "side_label1", "side_label2")]
script = ExtResource("1_3e0ga")
slider = NodePath("../UI/LeftSlider/HSlider")
box = NodePath("Box/Cube")
shadow = NodePath("Shadow")
camera = NodePath("CameraTarget/Camera3D")
decal1 = NodePath("Decal")
decal2 = NodePath("Decal2")
decal3 = NodePath("Decal3")
side_label1 = NodePath("SideLabel1")
side_label2 = NodePath("SideLabel2")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Main"]
transform = Transform3D(0.59171, -0.319566, 0.740106, -0.0208824, 0.91169, 0.410348, -0.80588, -0.258262, 0.532783, 0, 0, 0)
light_energy = 0.5
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="Main"]
environment = SubResource("Environment_wfqae")

[node name="Box" type="Node3D" parent="Main"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Cube" type="MeshInstance3D" parent="Main/Box"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("ArrayMesh_xdj4f")
skeleton = NodePath("")

[node name="Grid" type="Sprite3D" parent="Main"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
texture = ExtResource("3_bqyg1")

[node name="Shadow" type="Sprite3D" parent="Main"]
transform = Transform3D(2, 0, 0, 0, -8.74228e-08, -1, 0, 2, -4.37114e-08, 0, 0.0146288, 0)
texture = ExtResource("4_k8jki")

[node name="Decal" type="Sprite3D" parent="Main"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -3.7, 0.129, 4.00124)
texture = ExtResource("5_pkjgq")

[node name="Decal2" type="Sprite3D" parent="Main"]
transform = Transform3D(-8.74228e-09, 0, 0.2, 0, 0.2, 0, -0.2, 0, -8.74228e-09, 4.003, 0.8, 3.7)
texture = ExtResource("6_4wadw")

[node name="Decal3" type="Sprite3D" parent="Main"]
transform = Transform3D(-8.74228e-09, 0, 0.2, 0, 0.2, 0, -0.2, 0, -8.74228e-09, 4.001, 0.189, 3.7)
texture = ExtResource("7_s6gif")

[node name="SideLabel1" type="Sprite3D" parent="Main"]
transform = Transform3D(-1.31134e-08, -0.3, -1.31134e-08, 0, -1.31134e-08, 0.3, -0.3, 1.31134e-08, 5.73206e-16, 4.3, 0.042, 0)
texture = ExtResource("8_tqnm3")

[node name="SideLabel2" type="Sprite3D" parent="Main"]
transform = Transform3D(0.3, 0, 0, 0, -1.31134e-08, 0.3, 0, -0.3, -1.31134e-08, 0, 0.031, 4.3)
texture = ExtResource("8_tqnm3")

[node name="CameraTarget" type="Node3D" parent="Main"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, -2.5)

[node name="Camera3D" type="Camera3D" parent="Main/CameraTarget"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.5, 5.5, 5.5)

[node name="h_label" type="Sprite3D" parent="Main"]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 4.2, 0.5, -4.2)
billboard = 2
alpha_cut = 1
texture = ExtResource("10_51emq")

[node name="h_line" type="Sprite3D" parent="Main"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.03, 0.5, -4.03)
billboard = 2
texture_filter = 0
texture = ExtResource("9_tm7ot")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_xrwn6")

[node name="LeftSlider" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.011
anchor_top = 0.011
anchor_right = 0.011
anchor_bottom = 0.011
offset_right = 384.0
offset_bottom = 42.0

[node name="Back" type="Button" parent="UI/LeftSlider"]
layout_mode = 2
text = "Voltar
"

[node name="HSlider" type="HSlider" parent="UI/LeftSlider"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
min_value = 0.5
max_value = 4.3
step = 0.1
value = 3.0

[node name="Container" type="HBoxContainer" parent="UI/LeftSlider"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="UI/LeftSlider/Container"]
custom_minimum_size = Vector2(60, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("9_r0inx")
expand_mode = 1

[node name="Label" type="Label" parent="UI/LeftSlider/Container"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("10_binec")
theme_override_font_sizes/font_size = 32
text = "3"

[node name="RightGraph" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.989
anchor_top = 0.5
anchor_right = 0.989
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -345.0
offset_bottom = 345.0
grow_horizontal = 0
grow_vertical = 2

[node name="FunctionValues" type="VBoxContainer" parent="UI/RightGraph"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="UI/RightGraph/FunctionValues"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="UI/RightGraph/FunctionValues/CenterContainer"]
clip_contents = true
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 10
texture = ExtResource("11_u1bjq")
expand_mode = 1

[node name="CenterContainer2" type="CenterContainer" parent="UI/RightGraph/FunctionValues"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/RightGraph/FunctionValues/CenterContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UI/RightGraph/FunctionValues/CenterContainer2/HBoxContainer"]
custom_minimum_size = Vector2(90, 30)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("12_bc5xx")
expand_mode = 1

[node name="Label2" type="Label" parent="UI/RightGraph/FunctionValues/CenterContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("10_binec")
theme_override_font_sizes/font_size = 32
text = "48"

[node name="SubViewportContainer" type="SubViewportContainer" parent="UI/RightGraph"]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="UI/RightGraph/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(600, 600)
render_target_update_mode = 4

[node name="Graph" parent="UI/RightGraph/SubViewportContainer/SubViewport" node_paths=PackedStringArray("slider") instance=ExtResource("13_rsndy")]
slider = NodePath("../../../../LeftSlider/HSlider")

[connection signal="pressed" from="UI/LeftSlider/Back" to="UI" method="_on_back_pressed"]
[connection signal="value_changed" from="UI/LeftSlider/HSlider" to="UI" method="_on_h_slider_value_changed"]
